Fix dark mode

--- a/sass/layout/components/_testimonial.scss
+++ b/sass/layout/components/_testimonial.scss
@@ -23,6 +23,7 @@
   @media (--dark) {
     --background-color: var(--color-plum-3);
     --border-color: var(--color-gray-7);
+    --color-paragraph: var(--color-white);
   }
 
   @media (--min-640) {
